--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("Images/e.jpg") no-repeat;
+  background: url("Images/back.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -127,10 +127,10 @@ nav.sticky .menu-btn{
 }
 .home .text-one{
   font-size: 25px;
-  color: #070102;
+  color: #f0ebecef;
 }
 .home .text-two{
-  color: #0E2431;
+  color: #edf2f5;
   font-size: 75px;
   font-weight: 600;
   margin-left: -3px;
@@ -138,12 +138,12 @@ nav.sticky .menu-btn{
 .home .text-three{
   font-size: 40px;
   margin: 5px 0;
-  color: #010308;
+  color: #eceef5;
 }
 .home .text-four{
   font-size: 23px;
   margin: 5px 0;
-  color: #0E2431;
+  color: #eceff1;
 }
 .home .button{
   margin: 14px 0;
